src/components/common/open-modal/open-modal.scss
@use '../../../assets/styles/variables' as *;
@use '../../../assets/styles/mixins' as *;
@use '../../../assets/styles/animation' as *;

.modal {
  @include flex(center, center, column);
  max-width: 25rem;
  position: fixed;
  z-index: 10;
  min-width: 25rem;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  background: $bg-color-white;
  border-radius: 1.25rem;
  opacity: 0;
  animation: modal-fade-in 0.7s ease forwards;
  @media screen and (max-width: 480px) {
    min-width: 22.75rem;
  }
  &__image-container {
    @include flex(center, center, column);
    height: 14.375rem;
    width: 100%;
    overflow: hidden;
    .modal__image {
      height: 100%;
      transform: scale(1.3);
      @media screen and (max-width: 480px) {
        transform: scale(1.17);
      }
    }
  }
  &__description-container {
    @include flex(flex-start, normal, column);
    padding:1.25rem;
    gap: 1.25rem;
    width: 100%;
    background: #fff;
    border-radius: 1.25rem;
    .modal__text-container {
      @include flex(flex-start, normal, column);
      width: 100%;
      gap: 0.5rem;
      .modal__subtitle {
        @include text-header;
        &--for-work {
          color: $purple;
        }

        &--for-health {
          color: $green;
        }

        &--for-harmony {
          color: $pink;
        }
      }
      .modal__title {
        color: $dark;
        @include text-header(152%, 0.08rem, 1rem);
      }
      .modal__paragraph {
        color: $dark;
        @include text-paragraph;
      }
      .superpowers-container {
        @include flex(flex-start, normal, column);
        width: 100%;
        .superpowers__information {
          @include flex(center, normal, row);
          gap: 0.75rem;
          width: 100%;
          .superpowers__title {
            color: $dark;
            @include text-paragraph;
            flex: 1 0 0;
          }
          .superpowers__text {
            color: $dark;
            @include text-paragraph;
          }
          .superpowers__stars {
            display: flex;
            align-items: flex-start;
            gap: 0.5rem;
            min-width: 7rem;
            .star-active {
              svg {
                path {
                  fill-opacity: 1;
                }
              }
            }
          }
        }
      }
    }
  }
  .modal__cancel {
    width: 2.5rem;
    height: 2.5rem;
    position: absolute;
    right: 0.75rem;
    top: 0.75rem;
    @include flex-center;
    border: none;
  }
}

.shadow {
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  background: rgba(24, 28, 41, 0.80);
}

.modal-active {
  opacity: 1;
}

